input container text color fixes margins and spacing

--- a/styles.css
+++ b/styles.css
@@ -163,13 +163,14 @@ eerie gray - 1E1E1E
 .input-container {
     position: relative; 
     margin-bottom: 5vh;
-    color: #101010;
+    border: none;
 }
 
 #question {
     font-family: "Jersey 10", sans-serif;
     font-size: 5rem;
     background-color: #1E1E1E;
+    color: #D9D9D9;
     border: none;
 }
 
@@ -177,14 +178,14 @@ eerie gray - 1E1E1E
 
 input[type="text"] {
     background-color: #1E1E1E;
-    border-radius: 10%;
     text-align: center;
+    color:#D9D9D9;
 }
 
-input[type="text"]:focus {
+/* input[type="text"]:focus {
     background-color:#D9D9D9;
     color: #101010;
-}
+} */
 
 input[type="text"]:focus::placeholder {
     color: transparent;
